# paimon-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
doc/: TODO.md
src/datafusion/: builder.rs  mod.rs  paimon_datafusion.rs
src/datafusion/dialect/: mod.rs  query.rs
src/datafusion/doc/: TODO.md
src/datafusion/paimon/: consumer.rs  error.rs  example.rs  exec.rs  extractor.rs  json_util.rs  manifest.rs  manifest_list.rs  mod.rs  reader.rs  snapshot.rs  table.rs  utils.rs
test/paimon/default.db/avro_parquet_table/bucket-0/: changelog-a3bf3e5c-7443-4b05-b671-9b31c070e3e7-0.avro  changelog-a3bf3e5c-7443-4b05-b671-9b31c070e3e7-2.avro  data-a3bf3e5c-7443-4b05-b671-9b31c070e3e7-1.avro  data-a3bf3e5c-7443-4b05-b671-9b31c070e3e7-3.avro
test/paimon/default.db/avro_parquet_table/bucket-1/: changelog-fe5e5d0a-8709-400d-855e-22ef1238316a-0.avro  data-fe5e5d0a-8709-400d-855e-22ef1238316a-1.avro
test/paimon/default.db/avro_parquet_table/manifest/: manifest-90cbba21-37fe-4e9e-ba86-71e680b87955-0  manifest-90cbba21-37fe-4e9e-ba86-71e680b87955-1  manifest-list-ff7ad6de-ab40-4e58-b259-0bf32f130925-0  manifest-list-ff7ad6de-ab40-4e58-b259-0bf32f130925-1  manifest-list-ff7ad6de-ab40-4e58-b259-0bf32f130925-2
test/paimon/default.db/avro_parquet_table/schema/: schema-0
test/paimon/default.db/avro_parquet_table/snapshot/: snapshot-1
test/paimon/default.db/many_pk_table/bucket-0/: changelog-a53acd62-0d99-43d6-8ffe-a76ac3b719d9-0.parquet  data-a53acd62-0d99-43d6-8ffe-a76ac3b719d9-3.parquet
test/paimon/default.db/many_pk_table/bucket-1/: changelog-c6421a8e-b871-49af-b43b-bfa02a9e6034-2.parquet  data-c6421a8e-b871-49af-b43b-bfa02a9e6034-1.parquet  data-c6421a8e-b871-49af-b43b-bfa02a9e6034-3.parquet
test/paimon/default.db/many_pk_table/manifest/: manifest-59119471-4085-4292-8548-8f5ae3598d8b-0  manifest-59119471-4085-4292-8548-8f5ae3598d8b-1  manifest-59119471-4085-4292-8548-8f5ae3598d8b-2  manifest-59119471-4085-4292-8548-8f5ae3598d8b-3  manifest-59119471-4085-4292-8548-8f5ae3598d8b-4  manifest-59119471-4085-4292-8548-8f5ae3598d8b-5  manifest-list-f83d882d-aa37-41d4-9299-47231b0302d9-0  manifest-list-f83d882d-aa37-41d4-9299-47231b0302d9-1  manifest-list-f83d882d-aa37-41d4-9299-47231b0302d9-10  manifest-list-f83d882d-aa37-41d4-9299-47231b0302d9-2  manifest-list-f83d882d-aa37-41d4-9299-47231b0302d9-3  manifest-list-f83d882d-aa37-41d4-9299-47231b0302d9-4  manifest-list-f83d882d-aa37-41d4-9299-47231b0302d9-5  manifest-list-f83d882d-aa37-41d4-9299-47231b0302d9-6  manifest-list-f83d882d-aa37-41d4-9299-47231b0302d9-7  manifest-list-f83d882d-aa37-41d4-9299-47231b0302d9-8  manifest-list-f83d882d-aa37-41d4-9299-47231b0302d9-9
test/paimon/default.db/many_pk_table/schema/: schema-0
test/paimon/default.db/many_pk_table/snapshot/: snapshot-1  snapshot-2  snapshot-3  snapshot-4
test/paimon/default.db/no_primary_key_table/bucket-0/: data-59403757-d863-4028-99f8-09bbe72c8923-0.parquet
test/paimon/default.db/no_primary_key_table/bucket-1/: data-62da4c90-0a5e-4b7f-afc2-377a465e1d22-0.parquet  data-7d646892-bb51-4d13-a897-a22ebe4f9ab2-0.parquet
test/paimon/default.db/no_primary_key_table/manifest/: manifest-85ef850d-a0d4-4885-bec9-961b1b64f206-0  manifest-85ef850d-a0d4-4885-bec9-961b1b64f206-1  manifest-list-35db78b8-3977-4baa-997a-54f1a27cc8de-0  manifest-list-35db78b8-3977-4baa-997a-54f1a27cc8de-1  manifest-list-a0e4767b-c182-4769-a302-805b37846169-0  manifest-list-a0e4767b-c182-4769-a302-805b37846169-1  manifest-list-a0e4767b-c182-4769-a302-805b37846169-2  manifest-list-a0e4767b-c182-4769-a302-805b37846169-3  manifest-list-a0e4767b-c182-4769-a302-805b37846169-4  manifest-list-a0e4767b-c182-4769-a302-805b37846169-5  manifest-list-a0e4767b-c182-4769-a302-805b37846169-6  manifest-list-a0e4767b-c182-4769-a302-805b37846169-7
test/paimon/default.db/no_primary_key_table/schema/: schema-0
test/paimon/default.db/no_primary_key_table/snapshot/: snapshot-1  snapshot-2  snapshot-3  snapshot-4  snapshot-5
(+59 files in other folders)
