[package]
name = "paimon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
derive_builder = "0.11.2"
tokio = { version = "1", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["tracing-log", "fmt"] }
async-trait = "0.1.68"
futures = "0.3.28"
bytes = "1.4.0"
tokio-stream = "0.1.14"
tokio-stream-ext = "0.1.5"
arrow = { version = "43.0.0", features = ["prettyprint"] }
arrow-csv = "43.0.0"
arrow-ipc = "43.0.0"
arrow-schema = "43.0.0"
arrow-array = "43.0.0"
arrow-select = "43.0.0"
parquet = {version= "43.0.0", features = ["async"]}
tempfile = "3.5.0"
arrow-cast = { version = "43.0.0", features = ["comfy-table", "prettyprint"] }
#turmoil = "0.5.6"
async-stream = "0.3"
tower = "0.4"
datafusion = { version = "28.0.0", features = ["avro", "apache-avro"]}
datafusion-common = { version = "28.0.0", features = ["avro", "apache-avro", "parquet", "object_store"]}
datafusion-expr = "28.0.0"
datafusion-optimizer = "28.0.0"
datafusion-sql = "28.0.0"
nom = "7.1.3"
serde_bytes = "0.11.12"
apache-avro = { version = "0.15.0", features = ["snappy"]}
chrono = { version = "0.4.26", default-features = false }
object_store = "0.6.1"
itertools = "0.11.0"
ahash = "0.8.3"
url = "2.4.0"
datafusion-cli = "28.0.0"
